[gd_scene load_steps=4 format=3 uid="uid://bb307mks8n74m"]

[ext_resource type="Script" path="res://HUD.gd" id="1_ye2fm"]
[ext_resource type="AudioStream" uid="uid://dxdx1c3xq40ab" path="res://sfx/snap.mp3" id="2_703k6"]

[sub_resource type="CanvasTexture" id="CanvasTexture_jgv6o"]

[node name="HUD" type="Node"]
script = ExtResource("1_ye2fm")

[node name="Label" type="Label" parent="."]
z_index = 1
offset_right = 160.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Player:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Img" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(160, 40)
scale = Vector2(0.25, 0.25)

[node name="Draw" type="Label" parent="."]
visible = false
offset_left = 359.0
offset_top = 221.0
offset_right = 764.0
offset_bottom = 411.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 120
text = "DRAW!"

[node name="VictorC" type="Control" parent="."]
visible = false
layout_mode = 3
anchor_left = 0.497
anchor_top = 0.53
anchor_right = 0.497
anchor_bottom = 0.53
offset_left = -356.4
offset_top = -179.2
offset_right = 354.6
offset_bottom = 193.8

[node name="Label" type="Label" parent="VictorC"]
z_index = 1
layout_mode = 0
offset_left = 44.0
offset_top = 70.0
offset_right = 456.0
offset_bottom = 210.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Victory!"

[node name="VictorImg" type="TextureRect" parent="VictorC"]
z_index = 1
layout_mode = 0
offset_left = 444.0
offset_top = 73.0
offset_right = 607.0
offset_bottom = 223.0

[node name="TextureRect" type="TextureRect" parent="VictorC"]
modulate = Color(0.960784, 0.960784, 0.960784, 0.854902)
layout_mode = 0
offset_left = -280.0
offset_top = -186.0
offset_right = 1000.0
offset_bottom = 534.0
texture = SubResource("CanvasTexture_jgv6o")

[node name="Button" type="Button" parent="VictorC"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.776
anchor_right = 0.51
anchor_bottom = 0.776
offset_left = -86.08
offset_top = -27.312
offset_right = 85.92
offset_bottom = 27.688
tooltip_text = "Wookies"
text = "Play Again"

[node name="Snap" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_703k6")
volume_db = -15.0

[connection signal="pressed" from="VictorC/Button" to="." method="on_play_again"]
